--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
       font-family: "Microsoft JhengHei", sans-serif;
       display: flex;
       justify-content: center;
-      padding: 40px;
+      align-items: center;
+      min-height: 100vh;
     }
 
     .container {
@@ -107,7 +108,7 @@
     <h2>小工具🛠️</h2>
 
     <label>門市代碼</label>
-    <input type="text" id="store" maxlength="3" placeholder="請輸入3碼門市代碼" />
+    <input type="text" id="store" maxlength="3" placeholder="門市代碼" />
 
     <label>用餐方式</label>
     <div class="btn-group" id="mealType">
@@ -123,7 +124,7 @@
       <button onclick="selectBtn(this, 'order')" data-value="4">網訂</button>
     </div>
 
-    <button id="generate" onclick="generate()">🚀 一鍵產生問卷連結</button>
+    <button id="generate" onclick="generate()">🚀 一鍵複製問卷連結</button>
   </div>
 
   <script>
@@ -168,7 +169,7 @@
     function generate() {
       const store = document.getElementById("store").value.trim();
       if (!store || store.length !== 3 || isNaN(store)) {
-        alert("請輸入有效的3碼門市代碼");
+        alert("請輸入有效門市代碼");
         return;
       }
       if (!mealValue || !orderValue) {
@@ -217,7 +218,7 @@
       const link = `https://customer.kfc-listens.com/jfe/form/SV_1R1VSPEYVPlV1JA?Q_EED=${base64}`;
 
       navigator.clipboard.writeText(link).then(() => {
-        alert("已複製成功");
+        alert("✅已複製成功");
       });
     }
   </script>
