--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
       justify-content: center;
       padding: 40px;
     }
+
     .container {
-      width: 520px;
+      width: 500px;
       height: 520px;
       background-color: #fffaf4;
       border-radius: 20px;
@@ -21,12 +22,14 @@
       text-align: center;
       padding: 30px 25px;
     }
+
     h2 {
       font-size: 26px;
       font-weight: bold;
       color: #5a3c2d;
       margin-bottom: 30px;
     }
+
     label {
       display: block;
       margin-top: 18px;
@@ -34,6 +37,7 @@
       font-weight: bold;
       color: #5a3c2d;
     }
+
     input[type="text"] {
       width: 90%;
       padding: 12px;
@@ -44,11 +48,13 @@
       border: 1px solid #c9b29b;
       margin-top: 8px;
     }
+
     .btn-group {
       display: flex;
       justify-content: space-between;
       margin-top: 12px;
     }
+
     .btn-group button {
       flex: 1;
       margin: 0 4px;
@@ -62,19 +68,23 @@
       cursor: pointer;
       transition: background-color 0.3s ease;
     }
+
     .btn-group button:hover {
       background-color: #d4b89d;
     }
+
     .btn-group button.active {
       background-color: #c4a88b;
     }
+
     .btn-group button.disabled {
       background-color: #eee4db;
       color: #999;
       cursor: not-allowed;
     }
+
     #generate {
-      margin-top: 42px;
+      margin-top: 44px;
       width: 100%;
       padding: 16px;
       font-size: 20px;
@@ -86,129 +96,126 @@
       cursor: pointer;
       transition: background-color 0.3s ease;
     }
+
     #generate:hover {
       background-color: #8d6a4a;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h2>小工具🛠️</h2>
+<div class="container">
+  <h2>小工具🛠️</h2>
 
-    <label>門市代碼</label>
-    <input type="text" id="store" maxlength="3" placeholder="" />
+  <label>門市代碼</label>
+  <input type="text" id="store" maxlength="3" placeholder="" />
 
-    <label>用餐方式</label>
-    <div class="btn-group" id="mealType">
-      <button onclick="selectBtn(this, 'meal')" data-value="2">內用</button>
-      <button onclick="selectBtn(this, 'meal')" data-value="4">外帶</button>
-      <button onclick="selectBtn(this, 'meal')" data-value="外送">外送</button>
-    </div>
-
-    <label>點餐方式</label>
-    <div class="btn-group" id="orderType">
-      <button onclick="selectBtn(this, 'order')" data-value="3">點餐機</button>
-      <button onclick="selectBtn(this, 'order')" data-value="2">櫃檯</button>
-      <button onclick="selectBtn(this, 'order')" data-value="4">網訂</button>
-    </div>
-
-    <button id="generate" onclick="generate()">🚀 一鍵產生問卷連結</button>
+  <label>用餐方式</label>
+  <div class="btn-group" id="mealType">
+    <button onclick="selectBtn(this, 'meal')" data-value="2">內用</button>
+    <button onclick="selectBtn(this, 'meal')" data-value="4">外帶</button>
+    <button onclick="selectBtn(this, 'meal')" data-value="外送">外送</button>
   </div>
 
-  <script>
-    let mealValue = "";
-    let orderValue = "";
+  <label>點餐方式</label>
+  <div class="btn-group" id="orderType">
+    <button onclick="selectBtn(this, 'order')" data-value="3">點餐機</button>
+    <button onclick="selectBtn(this, 'order')" data-value="2">櫃檯</button>
+    <button onclick="selectBtn(this, 'order')" data-value="4">網訂</button>
+  </div>
 
-    const externalTailCodes = ["10050001", "14480005", "13350004", "12230003", "18600010", "0004", "2001", "0001"];
-    const normalTailCodes = ["0053", "0041", "0026", "0061", "0003", "0004", "0005", "0010", "0030", "0011", "0020", "0022", "0033"];
+  <button id="generate" onclick="generate()">🚀 一鍵產生問卷連結</button>
+</div>
 
-    function selectBtn(button, type) {
-      const group = type === 'meal' ? document.getElementById('mealType') : document.getElementById('orderType');
-      const buttons = group.querySelectorAll('button');
-      buttons.forEach(btn => btn.classList.remove('active'));
-      button.classList.add('active');
+<script>
+  let mealValue = "";
+  let orderValue = "";
 
-      if (type === 'meal') {
-        mealValue = button.dataset.value;
-        const orderButtons = document.getElementById('orderType').querySelectorAll('button');
-        if (mealValue === "外送") {
-          orderValue = "4";
-          orderButtons.forEach(btn => {
-            btn.classList.remove('active');
-            btn.classList.add('disabled');
-            if (btn.dataset.value === "4") {
-              btn.classList.add('active');
-            }
-          });
-        } else {
-          orderButtons.forEach(btn => {
-            btn.classList.remove('disabled');
-          });
-        }
-      } else {
-        if (!button.classList.contains('disabled')) {
-          orderValue = button.dataset.value;
-        }
-      }
-    }
+  const externalTailCodes = ["10050001", "14480005", "13350004", "12230003", "18600010", "20010001", "00040004", "00010004"];
+  const normalTailCodes = ["0053", "0041", "0026", "0061", "0003", "0004", "0005", "0010", "0030", "0011", "0020", "0022", "0033"];
 
-    function generate() {
-      const store = document.getElementById("store").value.trim();
-      if (!store || store.length !== 3 || isNaN(store)) {
-        alert("請輸入有效的3碼門市代碼");
-        return;
-      }
-      if (!mealValue || !orderValue) {
-        alert("請選擇用餐與點餐方式");
-        return;
-      }
+  function selectBtn(button, type) {
+    const group = type === 'meal' ? document.getElementById('mealType') : document.getElementById('orderType');
+    const buttons = group.querySelectorAll('button');
+    buttons.forEach(btn => btn.classList.remove('active'));
 
-      const prefix = store.startsWith("5") ? "TWB" : "TWI";
-      const now = new Date();
-      const date = new Date(now.getFullYear(), now.getMonth(), now.getDate() - 1);
-      const d = date.toISOString().slice(0, 10).replace(/-/g, "");
-      const s = String(Math.floor(Math.random() * (22 - 10 + 1)) + 10).padStart(2, '0');
-      const t = `${s}${String(Math.floor(Math.random() * 60)).padStart(2, '0')}${String(Math.floor(Math.random() * 60)).padStart(2, '0')}`;
+    button.classList.add('active');
 
-      let m = "";
-      let k = "";
-      let tail = "";
-      let u = "";
-
+    if (type === 'meal') {
+      mealValue = button.dataset.value;
+      const orderButtons = document.getElementById('orderType').querySelectorAll('button');
       if (mealValue === "外送") {
-        k = Math.random() < 0.5 ? "1" : "2";
-        m = k;
-        tail = externalTailCodes[Math.floor(Math.random() * externalTailCodes.length)];
-        u = `${prefix}${store}${d}${tail}`;
-        orderValue = "4";
+        orderValue = "4"; // 網訂
+        orderButtons.forEach(btn => {
+          btn.classList.remove('active');
+          btn.classList.add('disabled');
+          if (btn.dataset.value === "4") btn.classList.add('active');
+        });
       } else {
-        m = mealValue;
-        k = "2";
-        const useSafe = Math.random() < 0.6;
-        tail = useSafe
-          ? normalTailCodes[Math.floor(Math.random() * normalTailCodes.length)]
-          : String(Math.floor(10000000 + Math.random() * 89999999));
-        u = `${prefix}${store}${d}${tail}`;
+        orderButtons.forEach(btn => {
+          btn.classList.remove('disabled');
+        });
+        orderValue = ""; // 等待點選
       }
-
-      const obj = {
-        S: `886K${prefix}${store}`,
-        U: u,
-        D: d,
-        T: t,
-        Country: "TW",
-        O: orderValue,
-        M: m,
-        K: k
-      };
-
-      const base64 = btoa(JSON.stringify(obj));
-      const link = `https://customer.kfc-listens.com/jfe/form/SV_1R1VSPEYVPlV1JA?Q_EED=${base64}`;
-
-      navigator.clipboard.writeText(link).then(() => {
-        alert("已複製成功");
-      });
+    } else {
+      if (!button.classList.contains("disabled")) {
+        orderValue = button.dataset.value;
+      }
     }
-  </script>
+  }
+
+  function generate() {
+    const store = document.getElementById("store").value.trim();
+    if (!store || store.length !== 3 || isNaN(store)) {
+      alert("請輸入有效的3碼門市代碼");
+      return;
+    }
+    if (!mealValue || !orderValue) {
+      alert("請選擇用餐與點餐方式");
+      return;
+    }
+
+    const prefix = store.startsWith("5") ? "TWB" : "TWI";
+    const now = new Date();
+    const date = new Date(now.getFullYear(), now.getMonth(), now.getDate() - 1);
+    const d = date.toISOString().slice(0, 10).replace(/-/g, "");
+    const s = String(Math.floor(Math.random() * (22 - 10 + 1)) + 10).padStart(2, '0');
+    const t = `${s}${String(Math.floor(Math.random() * 60)).padStart(2, '0')}${String(Math.floor(Math.random() * 60)).padStart(2, '0')}`;
+    let k = "2";
+    let m = mealValue;
+    let tail = "";
+    let u = "";
+
+    if (mealValue === "外送") {
+      m = "1";  // 觸發外送題組
+      k = "1";
+      tail = externalTailCodes[Math.floor(Math.random() * externalTailCodes.length)];
+      u = `${prefix}${store}${d}${tail}`;
+    } else {
+      const useSafe = Math.random() < 0.6;
+      tail = useSafe
+        ? normalTailCodes[Math.floor(Math.random() * normalTailCodes.length)]
+        : String(Math.floor(10000000 + Math.random() * 89999999));
+      u = `${prefix}${store}${d}${tail}`;
+    }
+
+    const obj = {
+      S: `886K${prefix}${store}`,
+      U: u,
+      D: d,
+      T: t,
+      Country: "TW",
+      O: orderValue,
+      M: m,
+      K: k
+    };
+
+    const base64 = btoa(JSON.stringify(obj));
+    const link = `https://customer.kfc-listens.com/jfe/form/SV_1R1VSPEYVPlV1JA?Q_EED=${base64}`;
+
+    navigator.clipboard.writeText(link).then(() => {
+      alert(" ✅已複製成功");
+    });
+  }
+</script>
 </body>
 </html>
