--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     .container {
       width: 500px;
+      height: 520px;
       background-color: #fffaf4;
       border-radius: 20px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
@@ -35,6 +36,17 @@
       font-size: 18px;
       font-weight: bold;
       color: #5a3c2d;
+    }
+
+    input[type="text"] {
+      width: 90%;
+      padding: 12px;
+      font-size: 18px;
+      font-weight: bold;
+      text-align: center;
+      border-radius: 6px;
+      border: 1px solid #c9b29b;
+      margin-top: 8px;
     }
 
     .btn-group {
@@ -72,7 +84,7 @@
     }
 
     #generate {
-      margin-top: 42px;
+      margin-top: 44px;
       width: 100%;
       padding: 16px;
       font-size: 20px;
@@ -91,118 +103,119 @@
   </style>
 </head>
 <body>
-  <div class="container">
-    <h2>小工具🛠️</h2>
+<div class="container">
+  <h2>小工具🛠️</h2>
 
-    <label>用餐方式</label>
-    <div class="btn-group" id="mealType">
-      <button onclick="selectBtn(this, 'meal')" data-value="1">內用</button>
-      <button onclick="selectBtn(this, 'meal')" data-value="2">外帶</button>
-      <button onclick="selectBtn(this, 'meal')" data-value="delivery">外送</button>
-    </div>
+  <label>門市代碼</label>
+  <input type="text" id="store" maxlength="3" placeholder="請輸入3碼" />
 
-    <label>點餐方式</label>
-    <div class="btn-group" id="orderType">
-      <button onclick="selectBtn(this, 'order')" data-value="3">點餐機</button>
-      <button onclick="selectBtn(this, 'order')" data-value="2">櫃檯</button>
-      <button onclick="selectBtn(this, 'order')" data-value="4">網訂</button>
-    </div>
-
-    <button id="generate" onclick="generate()">🚀 一鍵產生問卷連結</button>
+  <label>用餐方式</label>
+  <div class="btn-group" id="mealType">
+    <button onclick="selectBtn(this, 'meal')" data-value="2">內用</button>
+    <button onclick="selectBtn(this, 'meal')" data-value="4">外帶</button>
+    <button onclick="selectBtn(this, 'meal')" data-value="外送">外送</button>
   </div>
 
-  <script>
-    let mealValue = "";
-    let orderValue = "";
+  <label>點餐方式</label>
+  <div class="btn-group" id="orderType">
+    <button onclick="selectBtn(this, 'order')" data-value="3">點餐機</button>
+    <button onclick="selectBtn(this, 'order')" data-value="2">櫃檯</button>
+    <button onclick="selectBtn(this, 'order')" data-value="4">網訂</button>
+  </div>
 
-    const externalTailCodes = ["10050001", "14480005", "13350004", "12230003", "18600010", "20010001", "00010001", "00040001"];
-    const normalTailCodes = ["0053", "0041", "0026", "0061", "0003", "0004", "0005", "0010", "0030", "0011", "0020", "0022", "0033", "0065", "0071", "0088"];
+  <button id="generate" onclick="generate()">🚀 一鍵產生問卷連結</button>
+</div>
 
-    function selectBtn(button, type) {
-      const group = type === 'meal' ? document.getElementById('mealType') : document.getElementById('orderType');
-      const buttons = group.querySelectorAll('button');
-      buttons.forEach(btn => btn.classList.remove('active'));
-      button.classList.add('active');
+<script>
+  let mealValue = "";
+  let orderValue = "";
 
-      if (type === 'meal') {
-        mealValue = button.dataset.value;
+  const externalTailCodes = ["10050001", "14480005", "13350004", "12230003", "18600010", "20010001", "00040004", "00010004"];
+  const normalTailCodes = ["0053", "0041", "0026", "0061", "0003", "0004", "0005", "0010", "0030", "0011", "0020", "0022", "0033"];
 
-        const orderButtons = document.getElementById('orderType').querySelectorAll('button');
-        if (mealValue === "delivery") {
-          orderValue = "4"; // 強制網訂
-          orderButtons.forEach(btn => {
-            btn.classList.remove('active');
-            btn.classList.add('disabled');
-            btn.disabled = true;
-            if (btn.dataset.value === "4") {
-              btn.classList.add('active');
-            }
-          });
-        } else {
-          orderButtons.forEach(btn => {
-            btn.classList.remove('disabled');
-            btn.disabled = false;
-          });
-        }
+  function selectBtn(button, type) {
+    const group = type === 'meal' ? document.getElementById('mealType') : document.getElementById('orderType');
+    const buttons = group.querySelectorAll('button');
+    buttons.forEach(btn => btn.classList.remove('active'));
+
+    button.classList.add('active');
+
+    if (type === 'meal') {
+      mealValue = button.dataset.value;
+      const orderButtons = document.getElementById('orderType').querySelectorAll('button');
+      if (mealValue === "外送") {
+        orderValue = "4"; // 網訂
+        orderButtons.forEach(btn => {
+          btn.classList.remove('active');
+          btn.classList.add('disabled');
+          if (btn.dataset.value === "4") btn.classList.add('active');
+        });
       } else {
+        orderButtons.forEach(btn => {
+          btn.classList.remove('disabled');
+        });
+        orderValue = ""; // 等待點選
+      }
+    } else {
+      if (!button.classList.contains("disabled")) {
         orderValue = button.dataset.value;
       }
     }
+  }
 
-    async function generate() {
-      const storeRaw = await navigator.clipboard.readText();
-      if (!storeRaw) return alert("剪貼板沒有門市代碼");
-      let store = storeRaw.trim();
-      if (store.length === 2) store = "0" + store;
-      if (store.length !== 3 || isNaN(store)) return alert("門市代碼格式錯誤");
-
-      if (!mealValue || !orderValue) {
-        alert("請選擇用餐與點餐方式");
-        return;
-      }
-
-      const prefix = store.startsWith("5") ? "TWB" : "TWI";
-      const now = new Date();
-      const date = new Date(now.getFullYear(), now.getMonth(), now.getDate() - 1);
-      const d = date.toISOString().slice(0, 10).replace(/-/g, "");
-      const s = String(Math.floor(Math.random() * (22 - 10 + 1)) + 10).padStart(2, '0');
-      const t = `${s}${String(Math.floor(Math.random() * 60)).padStart(2, '0')}${String(Math.floor(Math.random() * 60)).padStart(2, '0')}`;
-
-      let m, k, tail, u;
-      if (mealValue === "delivery") {
-        m = "1";
-        k = "2";
-        const useSafe = Math.random() < 0.8;
-        tail = useSafe
-          ? externalTailCodes[Math.floor(Math.random() * externalTailCodes.length)]
-          : String(Math.floor(10000000 + Math.random() * 89999999));
-        u = `${prefix}${store}${d}${tail}`;
-      } else {
-        m = mealValue;
-        k = "2";
-        const useSafe = Math.random() < 0.6;
-        tail = useSafe
-          ? normalTailCodes[Math.floor(Math.random() * normalTailCodes.length)]
-          : String(Math.floor(10000000 + Math.random() * 89999999));
-        u = `${prefix}${store}${d}${tail}`;
-      }
-
-      const obj = {
-        S: `886K${prefix}${store}`,
-        U: u,
-        D: d,
-        T: t,
-        Country: "TW",
-        O: orderValue,
-        M: m,
-        K: k
-      };
-
-      const base64 = btoa(JSON.stringify(obj));
-      const link = `https://customer.kfc-listens.com/jfe/form/SV_1R1VSPEYVPlV1JA?Q_EED=${base64}`;
-      await navigator.clipboard.writeText(link);
-      alert("✅已複製成功");
+  function generate() {
+    const store = document.getElementById("store").value.trim();
+    if (!store || store.length !== 3 || isNaN(store)) {
+      alert("請輸入有效的3碼門市代碼");
+      return;
     }
-  </script>
+    if (!mealValue || !orderValue) {
+      alert("請選擇用餐與點餐方式");
+      return;
+    }
+
+    const prefix = store.startsWith("5") ? "TWB" : "TWI";
+    const now = new Date();
+    const date = new Date(now.getFullYear(), now.getMonth(), now.getDate() - 1);
+    const d = date.toISOString().slice(0, 10).replace(/-/g, "");
+    const s = String(Math.floor(Math.random() * (22 - 10 + 1)) + 10).padStart(2, '0');
+    const t = `${s}${String(Math.floor(Math.random() * 60)).padStart(2, '0')}${String(Math.floor(Math.random() * 60)).padStart(2, '0')}`;
+    let k = "2";
+    let m = mealValue;
+    let tail = "";
+    let u = "";
+
+    if (mealValue === "外送") {
+      m = "1";  // 觸發外送題組
+      k = "1";
+      tail = externalTailCodes[Math.floor(Math.random() * externalTailCodes.length)];
+      u = `${prefix}${store}${d}${tail}`;
+    } else {
+      const useSafe = Math.random() < 0.6;
+      tail = useSafe
+        ? normalTailCodes[Math.floor(Math.random() * normalTailCodes.length)]
+        : String(Math.floor(10000000 + Math.random() * 89999999));
+      u = `${prefix}${store}${d}${tail}`;
+    }
+
+    const obj = {
+      S: `886K${prefix}${store}`,
+      U: u,
+      D: d,
+      T: t,
+      Country: "TW",
+      O: orderValue,
+      M: m,
+      K: k
+    };
+
+    const base64 = btoa(JSON.stringify(obj));
+    const link = `https://customer.kfc-listens.com/jfe/form/SV_1R1VSPEYVPlV1JA?Q_EED=${base64}`;
+
+    navigator.clipboard.writeText(link).then(() => {
+      alert("✅已複製成功");
+    });
+  }
+</script>
 </body>
 </html>
