--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
       font-family: "Microsoft JhengHei", sans-serif;
       display: flex;
       justify-content: center;
-      padding: 40px;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
     }
 
     .container {
       width: 500px;
-      height: 520px;
       background-color: #fffaf4;
       border-radius: 20px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
@@ -111,9 +112,9 @@
 
   <label>用餐方式</label>
   <div class="btn-group" id="mealType">
-    <button onclick="selectBtn(this, 'meal')" data-value="2">內用</button>
-    <button onclick="selectBtn(this, 'meal')" data-value="4">外帶</button>
-    <button onclick="selectBtn(this, 'meal')" data-value="外送">外送</button>
+    <button onclick="selectBtn(this, 'meal')" data-value="1">內用</button>
+    <button onclick="selectBtn(this, 'meal')" data-value="2">外帶</button>
+    <button onclick="selectBtn(this, 'meal')" data-value="delivery">外送</button>
   </div>
 
   <label>點餐方式</label>
@@ -131,30 +132,31 @@
   let orderValue = "";
 
   const externalTailCodes = ["10050001", "14480005", "13350004", "12230003", "18600010", "20010001", "00040004", "00010004"];
-  const normalTailCodes = ["0053", "0041", "0026", "0061", "0003", "0004", "0005", "0010", "0030", "0011", "0020", "0022", "0033"];
+  const normalTailCodes = ["0053", "0041", "0026", "0061", "0003", "0004", "0005", "0010", "0030", "0011", "0020", "0022", "0033", "0065", "0071", "0088"];
 
   function selectBtn(button, type) {
     const group = type === 'meal' ? document.getElementById('mealType') : document.getElementById('orderType');
     const buttons = group.querySelectorAll('button');
     buttons.forEach(btn => btn.classList.remove('active'));
-
     button.classList.add('active');
 
     if (type === 'meal') {
       mealValue = button.dataset.value;
       const orderButtons = document.getElementById('orderType').querySelectorAll('button');
-      if (mealValue === "外送") {
+      if (mealValue === "delivery") {
         orderValue = "4"; // 網訂
         orderButtons.forEach(btn => {
           btn.classList.remove('active');
           btn.classList.add('disabled');
+          btn.disabled = true;
           if (btn.dataset.value === "4") btn.classList.add('active');
         });
       } else {
         orderButtons.forEach(btn => {
           btn.classList.remove('disabled');
+          btn.disabled = false;
         });
-        orderValue = ""; // 等待點選
+        orderValue = "";
       }
     } else {
       if (!button.classList.contains("disabled")) {
@@ -164,11 +166,13 @@
   }
 
   function generate() {
-    const store = document.getElementById("store").value.trim();
+    let store = document.getElementById("store").value.trim();
+    if (store.length === 2) store = "0" + store;
     if (!store || store.length !== 3 || isNaN(store)) {
       alert("請輸入有效的3碼門市代碼");
       return;
     }
+
     if (!mealValue || !orderValue) {
       alert("請選擇用餐與點餐方式");
       return;
@@ -180,17 +184,20 @@
     const d = date.toISOString().slice(0, 10).replace(/-/g, "");
     const s = String(Math.floor(Math.random() * (22 - 10 + 1)) + 10).padStart(2, '0');
     const t = `${s}${String(Math.floor(Math.random() * 60)).padStart(2, '0')}${String(Math.floor(Math.random() * 60)).padStart(2, '0')}`;
-    let k = "2";
-    let m = mealValue;
-    let tail = "";
-    let u = "";
+    
+    let m, k, tail, u;
 
-    if (mealValue === "外送") {
-      m = "1";  // 觸發外送題組
-      k = "1";
-      tail = externalTailCodes[Math.floor(Math.random() * externalTailCodes.length)];
+    if (mealValue === "delivery") {
+      m = "1";
+      k = "2";
+      const useSafe = Math.random() < 0.8;
+      tail = useSafe
+        ? externalTailCodes[Math.floor(Math.random() * externalTailCodes.length)]
+        : String(Math.floor(10000000 + Math.random() * 89999999));
       u = `${prefix}${store}${d}${tail}`;
     } else {
+      m = mealValue;
+      k = "2";
       const useSafe = Math.random() < 0.6;
       tail = useSafe
         ? normalTailCodes[Math.floor(Math.random() * normalTailCodes.length)]
