--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>小工具🛠️</title>
   <style>
-    body {
+    html, body {
+      height: 100%;
+      margin: 0;
       background-color: #fdf6ee;
       font-family: "Microsoft JhengHei", sans-serif;
+      overflow: hidden;
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
-      margin: 0;
     }
 
     .container {
@@ -22,19 +23,20 @@
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
       text-align: center;
       padding: 30px 25px;
+      box-sizing: border-box;
     }
 
     h2 {
-      font-size: 26px;
+      font-size: 28px;
       font-weight: bold;
       color: #5a3c2d;
-      margin-bottom: 30px;
+      margin-bottom: 25px;
     }
 
     label {
       display: block;
-      margin-top: 18px;
-      font-size: 18px;
+      margin-top: 20px;
+      font-size: 20px;
       font-weight: bold;
       color: #5a3c2d;
     }
@@ -42,12 +44,12 @@
     input[type="text"] {
       width: 90%;
       padding: 12px;
-      font-size: 18px;
+      font-size: 20px;
       font-weight: bold;
       text-align: center;
       border-radius: 6px;
       border: 1px solid #c9b29b;
-      margin-top: 8px;
+      margin-top: 10px;
     }
 
     .btn-group {
@@ -60,7 +62,7 @@
       flex: 1;
       margin: 0 4px;
       padding: 12px 0;
-      font-size: 16px;
+      font-size: 18px;
       font-weight: bold;
       background-color: #e6d0b9;
       border: none;
@@ -85,7 +87,7 @@
     }
 
     #generate {
-      margin-top: 44px;
+      margin-top: 40px;
       width: 100%;
       padding: 16px;
       font-size: 20px;
@@ -108,12 +110,12 @@
   <h2>小工具🛠️</h2>
 
   <label>門市代碼</label>
-  <input type="text" id="store" maxlength="3" placeholder="請輸入3碼" />
+  <input type="text" id="store" maxlength="3" placeholder="請輸入3碼門市代碼" />
 
   <label>用餐方式</label>
   <div class="btn-group" id="mealType">
-    <button onclick="selectBtn(this, 'meal')" data-value="1">內用</button>
-    <button onclick="selectBtn(this, 'meal')" data-value="2">外帶</button>
+    <button onclick="selectBtn(this, 'meal')" data-value="2">內用</button>
+    <button onclick="selectBtn(this, 'meal')" data-value="4">外帶</button>
     <button onclick="selectBtn(this, 'meal')" data-value="delivery">外送</button>
   </div>
 
@@ -144,7 +146,7 @@
       mealValue = button.dataset.value;
       const orderButtons = document.getElementById('orderType').querySelectorAll('button');
       if (mealValue === "delivery") {
-        orderValue = "4"; // 網訂
+        orderValue = "4"; // 強制網訂
         orderButtons.forEach(btn => {
           btn.classList.remove('active');
           btn.classList.add('disabled');
@@ -156,7 +158,7 @@
           btn.classList.remove('disabled');
           btn.disabled = false;
         });
-        orderValue = "";
+        orderValue = ""; // 等待點選
       }
     } else {
       if (!button.classList.contains("disabled")) {
@@ -168,11 +170,10 @@
   function generate() {
     let store = document.getElementById("store").value.trim();
     if (store.length === 2) store = "0" + store;
-    if (!store || store.length !== 3 || isNaN(store)) {
+    if (store.length !== 3 || isNaN(store)) {
       alert("請輸入有效的3碼門市代碼");
       return;
     }
-
     if (!mealValue || !orderValue) {
       alert("請選擇用餐與點餐方式");
       return;
@@ -184,7 +185,7 @@
     const d = date.toISOString().slice(0, 10).replace(/-/g, "");
     const s = String(Math.floor(Math.random() * (22 - 10 + 1)) + 10).padStart(2, '0');
     const t = `${s}${String(Math.floor(Math.random() * 60)).padStart(2, '0')}${String(Math.floor(Math.random() * 60)).padStart(2, '0')}`;
-    
+
     let m, k, tail, u;
 
     if (mealValue === "delivery") {
@@ -194,7 +195,6 @@
       tail = useSafe
         ? externalTailCodes[Math.floor(Math.random() * externalTailCodes.length)]
         : String(Math.floor(10000000 + Math.random() * 89999999));
-      u = `${prefix}${store}${d}${tail}`;
     } else {
       m = mealValue;
       k = "2";
@@ -202,8 +202,9 @@
       tail = useSafe
         ? normalTailCodes[Math.floor(Math.random() * normalTailCodes.length)]
         : String(Math.floor(10000000 + Math.random() * 89999999));
-      u = `${prefix}${store}${d}${tail}`;
     }
+
+    u = `${prefix}${store}${d}${tail}`;
 
     const obj = {
       S: `886K${prefix}${store}`,
@@ -218,7 +219,6 @@
 
     const base64 = btoa(JSON.stringify(obj));
     const link = `https://customer.kfc-listens.com/jfe/form/SV_1R1VSPEYVPlV1JA?Q_EED=${base64}`;
-
     navigator.clipboard.writeText(link).then(() => {
       alert("✅已複製成功");
     });
