--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>小工具🛠️</title>
+  <title>KFC 問卷小工具</title>
   <style>
     html, body {
       height: 100%;
       margin: 0;
-      background-color: #fdf6ee;
+      background-color: #fdf9f4;
       font-family: "Microsoft JhengHei", sans-serif;
+      font-weight: bold;
       overflow: hidden;
       display: flex;
       justify-content: center;
@@ -17,213 +18,141 @@
     }
 
     .container {
-      width: 500px;
-      background-color: #fffaf4;
+      width: 520px;
+      background: linear-gradient(to bottom, #fffaf4, #f5ede5);
       border-radius: 20px;
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
+      box-shadow: 0 0 18px rgba(0, 0, 0, 0.08);
       text-align: center;
       padding: 30px 25px;
       box-sizing: border-box;
-      margin-top: 20px;
+      margin-top: 5%;
     }
 
     h2 {
       font-size: 30px;
       font-weight: bold;
-      color: #5a3c2d;
-      margin-bottom: 30px;
-      border: 2px solid #c4a88b;
-      padding: 10px;
-      border-radius: 10px;
-      background-color: #fdf0df;
-    }
-
-    label {
-      display: block;
-      margin-top: 20px;
-      font-size: 20px;
-      font-weight: bold;
-      color: #5a3c2d;
+      color: #4a3c2b;
+      margin-bottom: 24px;
+      padding: 12px 24px;
+      border: 2px solid #cbbca9;
+      background-color: #f2e8dc;
+      border-radius: 12px;
+      display: inline-block;
     }
 
     input[type="text"] {
       width: 90%;
-      padding: 12px;
+      padding: 14px;
       font-size: 20px;
       font-weight: bold;
       text-align: center;
       border-radius: 6px;
-      border: 1px solid #c9b29b;
+      border: 2px solid #bda993;
+      background-color: #fffdfb;
       margin-top: 10px;
     }
 
     .btn-group {
       display: flex;
+      flex-wrap: wrap;
       justify-content: space-between;
-      margin-top: 12px;
+      margin-top: 28px;
+      gap: 14px;
     }
 
     .btn-group button {
-      flex: 1;
-      margin: 0 4px;
-      padding: 12px 0;
-      font-size: 18px;
+      width: 48%;
+      padding: 16px 0;
+      font-size: 20px;
       font-weight: bold;
-      background-color: #e6d0b9;
-      border: none;
-      border-radius: 6px;
-      color: #000;
+      background: linear-gradient(to bottom, #e8ddcf, #ddd2c5);
+      border: 2px solid #b9a48d;
+      border-radius: 8px;
+      color: #3c2d20;
       cursor: pointer;
-      transition: background-color 0.3s ease;
+      transition: all 0.3s ease;
     }
 
     .btn-group button:hover {
-      background-color: #d4b89d;
-    }
-
-    .btn-group button.active {
-      background-color: #c4a88b;
-    }
-
-    .btn-group button.disabled {
-      background-color: #eee4db;
-      color: #999;
-      cursor: not-allowed;
-    }
-
-    #generate {
-      margin-top: 40px;
-      width: 100%;
-      padding: 18px;
-      font-size: 22px;
-      font-weight: bold;
-      background-color: #b08968;
-      color: white;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-    }
-
-    #generate:hover {
-      background-color: #8d6a4a;
+      background: linear-gradient(to bottom, #d6c4b3, #cbb7a5);
     }
   </style>
 </head>
 <body>
-<div class="container">
-  <h2>小工具🛠️</h2>
+  <div class="container">
+    <h2>小工具🛠️</h2>
 
-  <label>門市代碼</label>
-  <input type="text" id="store" maxlength="3" placeholder="X X X" />
+    <input id="store" type="text" maxlength="3" placeholder="請輸入3碼" />
 
-  <label>用餐方式</label>
-  <div class="btn-group" id="mealType">
-    <button onclick="selectBtn(this, 'meal')" data-value="2">內用</button>
-    <button onclick="selectBtn(this, 'meal')" data-value="4">外帶</button>
-    <button onclick="selectBtn(this, 'meal')" data-value="外送">外送</button>
+    <div class="btn-group">
+      <button onclick="generate('2','3','2','normal')">內用 / 點餐機</button>
+      <button onclick="generate('4','3','2','normal')">外帶 / 點餐機</button>
+      <button onclick="generate('2','2','2','normal')">內用 / 櫃檯</button>
+      <button onclick="generate('4','2','2','normal')">外帶 / 櫃檯</button>
+      <button onclick="generate('2','4','2','normal')">快取</button>
+      <button onclick="generate('1','4','2','delivery')">外送</button>
+    </div>
   </div>
 
-  <label>點餐方式</label>
-  <div class="btn-group" id="orderType">
-    <button onclick="selectBtn(this, 'order')" data-value="3">點餐機</button>
-    <button onclick="selectBtn(this, 'order')" data-value="2">櫃檯</button>
-    <button onclick="selectBtn(this, 'order')" data-value="4">網訂</button>
-  </div>
+  <script>
+    const deliveryTailCodes = [
+      "10050001", "14480005", "13350004", "12230003", "18600010",
+      "20010001", "00040004", "00010004", "6449000"
+    ];
+    const normalTailCodes = [
+      "0053", "0041", "0026", "0061", "0003", "0004", "0005", "0010",
+      "0030", "0011", "0020", "0022", "0033", "0065", "0071", "0088"
+    ];
 
-  <button id="generate" onclick="generate()">🚀 一鍵產生問卷連結</button>
-</div>
+    function getYesterdayDateStr() {
+      const d = new Date();
+      d.setDate(d.getDate() - 1);
+      return d.getFullYear().toString() +
+             String(d.getMonth() + 1).padStart(2, '0') +
+             String(d.getDate()).padStart(2, '0');
+    }
 
-<script>
-  let mealValue = "";
-  let orderValue = "";
+    function getRandomTimeCode() {
+      const h = String(Math.floor(Math.random() * 13) + 10).padStart(2, '0');
+      const m = String(Math.floor(Math.random() * 60)).padStart(2, '0');
+      const s = String(Math.floor(Math.random() * 60)).padStart(2, '0');
+      return h + m + s;
+    }
 
-  const externalTailCodes = ["10050001", "14480005", "13350004", "12230003", "18600010", "20010001", "00040004", "00010004"];
-  const normalTailCodes = ["0053", "0041", "0026", "0061", "0003", "0004", "0005", "0010", "0030", "0011", "0020", "0022", "0033"];
-
-  function selectBtn(button, type) {
-    const group = type === 'meal' ? document.getElementById('mealType') : document.getElementById('orderType');
-    const buttons = group.querySelectorAll('button');
-    buttons.forEach(btn => btn.classList.remove('active'));
-
-    button.classList.add('active');
-
-    if (type === 'meal') {
-      mealValue = button.dataset.value;
-      const orderButtons = document.getElementById('orderType').querySelectorAll('button');
-      if (mealValue === "外送") {
-        orderValue = "4"; // 網訂
-        orderButtons.forEach(btn => {
-          btn.classList.remove('active');
-          btn.classList.add('disabled');
-          if (btn.dataset.value === "4") btn.classList.add('active');
-        });
-      } else {
-        orderButtons.forEach(btn => {
-          btn.classList.remove('disabled');
-        });
-        orderValue = ""; // 等待點選
+    function generate(M, O, K, type) {
+      let store = document.getElementById("store").value.trim();
+      if (store.length === 2) store = "0" + store;
+      if (store.length !== 3 || isNaN(store)) {
+        alert("請輸入有效的3碼門市代碼");
+        return;
       }
-    } else {
-      if (!button.classList.contains("disabled")) {
-        orderValue = button.dataset.value;
-      }
+
+      const prefix = store.startsWith("5") ? "TWB" : "TWI";
+      const date = getYesterdayDateStr();
+      const timeCode = getRandomTimeCode();
+      const tail = type === 'delivery'
+        ? deliveryTailCodes[Math.floor(Math.random() * deliveryTailCodes.length)]
+        : normalTailCodes[Math.floor(Math.random() * normalTailCodes.length)];
+      const u = prefix + store + date + tail;
+
+      const payload = {
+        S: "886K" + prefix + store,
+        U: u,
+        D: date,
+        T: timeCode,
+        Country: "TW",
+        O: O,
+        M: M,
+        K: K
+      };
+
+      const encoded = btoa(unescape(encodeURIComponent(JSON.stringify(payload))));
+      const url = `https://customer.kfc-listens.com/jfe/form/SV_1R1VSPEYVPlV1JA?Q_EED=${encoded}`;
+
+      navigator.clipboard.writeText(url).then(() => {
+        alert("✅已複製成功");
+      });
     }
-  }
-
-  function generate() {
-    const store = document.getElementById("store").value.trim();
-    if (!store || store.length !== 3 || isNaN(store)) {
-      alert("請輸入有效的3碼門市代碼");
-      return;
-    }
-    if (!mealValue || !orderValue) {
-      alert("請選擇用餐與點餐方式");
-      return;
-    }
-
-    const prefix = store.startsWith("5") ? "TWB" : "TWI";
-    const now = new Date();
-    const date = new Date(now.getFullYear(), now.getMonth(), now.getDate() - 1);
-    const d = date.toISOString().slice(0, 10).replace(/-/g, "");
-    const s = String(Math.floor(Math.random() * (22 - 10 + 1)) + 10).padStart(2, '0');
-    const t = `${s}${String(Math.floor(Math.random() * 60)).padStart(2, '0')}${String(Math.floor(Math.random() * 60)).padStart(2, '0')}`;
-    let k = "2";
-    let m = mealValue;
-    let tail = "";
-    let u = "";
-
-    if (mealValue === "外送") {
-      m = "1";  // 觸發外送題組
-      k = "1";
-      tail = externalTailCodes[Math.floor(Math.random() * externalTailCodes.length)];
-      u = `${prefix}${store}${d}${tail}`;
-    } else {
-      const useSafe = Math.random() < 0.6;
-      tail = useSafe
-        ? normalTailCodes[Math.floor(Math.random() * normalTailCodes.length)]
-        : String(Math.floor(10000000 + Math.random() * 89999999));
-      u = `${prefix}${store}${d}${tail}`;
-    }
-
-    const obj = {
-      S: `886K${prefix}${store}`,
-      U: u,
-      D: d,
-      T: t,
-      Country: "TW",
-      O: orderValue,
-      M: m,
-      K: k
-    };
-
-    const base64 = btoa(JSON.stringify(obj));
-    const link = `https://customer.kfc-listens.com/jfe/form/SV_1R1VSPEYVPlV1JA?Q_EED=${base64}`;
-
-    navigator.clipboard.writeText(link).then(() => {
-      alert("✅已複製成功");
-    });
-  }
-</script>
+  </script>
 </body>
 </html>
